# TestTask_OM_T3_Junior_Embedded_3d_task

client/: CMakeLists.txt  client.cpp
server/: CMakeLists.txt  server.cpp
